model works ish

--- a/dota_web/dota-oracle/doracle/manual.ipynb
+++ b/dota_web/dota-oracle/doracle/manual.ipynb
@@ -12,27 +12,22 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "from joblib import dump\n",
+    "from joblib import dump, load\n",
     "import os\n",
     "import logging\n",
-    "import time\n",
-    "from datetime import datetime\n",
+    "from collections import defaultdict\n",
     "\n",
-    "# Set up logging\n",
+    "# Setup logging\n",
     "logging.basicConfig(\n",
     "    filename=\"data_loading_errors.log\",\n",
     "    level=logging.WARNING,\n",
     "    format=\"%(asctime)s - %(levelname)s - %(message)s\",\n",
     ")\n",
     "\n",
-    "# File paths\n",
+    "# Paths\n",
     "zip_path = \"data/dota_games.zip\"\n",
     "heroes_json_path = \"data/heroes.json\"\n",
-    "model_save_dir = \"models/\"\n",
-    "games_to_process = None  # Set to None for all games\n",
-    "\n",
-    "# Ensure model save directory exists\n",
-    "os.makedirs(model_save_dir, exist_ok=True)\n"
+    "games_to_process = None  # Process all games\n"
    ]
   },
   {
@@ -40,10 +35,113 @@
    "execution_count": 2,
    "id": "c30560cb-bf6a-47c8-9bff-86e7e372f95d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded hero mappings: 122\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_hero_names(path):\n",
+    "    with open(path, \"r\") as f:\n",
+    "        heroes = json.load(f)\n",
+    "    return {hero[\"id\"]: hero[\"api_name\"] for hero in heroes}\n",
+    "\n",
+    "hero_mapping = load_hero_names(heroes_json_path)\n",
+    "print(\"Loaded hero mappings:\", len(hero_mapping))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc113c9c-5ca3-4fc4-b8d4-c9176e692d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading Games:  49%|████████████████████████████▉                              | 1144853/2338043 [05:31<04:58, 3995.34it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "def load_games(zip_path, games_to_process=None):\n",
+    "    X, y = [], []\n",
+    "    \n",
+    "    with zipfile.ZipFile(zip_path, \"r\") as zip_file:\n",
+    "        json_files = [name for name in zip_file.namelist() if name.endswith(\".json\")]\n",
+    "        if games_to_process:\n",
+    "            json_files = json_files[:games_to_process]\n",
+    "\n",
+    "        for file_name in tqdm(json_files, desc=\"Loading Games\"):\n",
+    "            try:\n",
+    "                with zip_file.open(file_name, \"r\") as f:\n",
+    "                    game_data = json.load(f)\n",
+    "\n",
+    "                    # Game result features\n",
+    "                    game_features = {\n",
+    "                        \"radiant_score\": game_data[\"result\"][\"radiant_score\"],\n",
+    "                        \"dire_score\": game_data[\"result\"][\"dire_score\"],\n",
+    "                        \"duration\": game_data[\"result\"][\"duration\"],\n",
+    "                        \"tower_status_radiant\": game_data[\"result\"][\"tower_status_radiant\"],\n",
+    "                        \"tower_status_dire\": game_data[\"result\"][\"tower_status_dire\"]\n",
+    "                    }\n",
+    "\n",
+    "                    # Player-level statistics\n",
+    "                    for player in game_data[\"result\"][\"players\"]:\n",
+    "                        hero_id = player[\"hero_id\"]\n",
+    "                        kda = (player[\"kills\"] + player[\"assists\"]) / max(1, player[\"deaths\"])  # KDA metric\n",
+    "                        player_features = {\n",
+    "                            \"hero_id\": hero_id,\n",
+    "                            \"kda\": kda,\n",
+    "                            \"gpm\": player[\"gold_per_min\"],\n",
+    "                            \"xpm\": player[\"xp_per_min\"],\n",
+    "                            \"last_hits\": player[\"last_hits\"],\n",
+    "                            \"hero_damage\": player[\"hero_damage\"],\n",
+    "                            \"tower_damage\": player[\"tower_damage\"],\n",
+    "                            \"hero_healing\": player[\"hero_healing\"]\n",
+    "                        }\n",
+    "                        combined_features = {**game_features, **player_features}\n",
+    "                        X.append(combined_features)\n",
+    "                        y.append(1 if game_data[\"result\"][\"radiant_win\"] else 0)\n",
+    "            except Exception as e:\n",
+    "                logging.warning(f\"Error processing file {file_name}: {e}\")\n",
+    "    return X, y\n",
+    "\n",
+    "X_raw, y = load_games(zip_path, games_to_process)\n",
+    "print(\"Loaded game data!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f08536d-fc11-495a-8c82-89491de9e8e0",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "df_X = pd.DataFrame(X_raw).fillna(0)\n",
+    "X = df_X.drop(columns=[\"hero_id\"]).values  # Exclude hero_id for training\n",
+    "y = np.array(y)\n",
+    "\n",
+    "print(f\"Processed data shape: {X.shape}, Target shape: {y.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "596a4bf9-3b32-4cba-aae8-7e255c8e0eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "from datetime import datetime\n",
+    "\n",
     "class ManualLogisticRegression:\n",
-    "    def __init__(self, learning_rate=0.01, epochs=1000):\n",
+    "    def __init__(self, learning_rate=0.01, epochs=500):\n",
     "        self.learning_rate = learning_rate\n",
     "        self.epochs = epochs\n",
     "        self.weights = None\n",
@@ -54,10 +152,9 @@
     "    def sigmoid(z):\n",
     "        return 1 / (1 + np.exp(-z))\n",
     "\n",
-    "    @staticmethod\n",
-    "    def compute_loss(y_true, y_pred):\n",
+    "    def compute_loss(self, y_true, y_pred):\n",
     "        m = len(y_true)\n",
-    "        loss = -np.sum(y_true * np.log(y_pred + 1e-9) + (1 - y_true) * np.log(1 - y_pred + 1e-9)) / m\n",
+    "        loss = -np.mean(y_true * np.log(y_pred + 1e-9) + (1 - y_true) * np.log(1 - y_pred + 1e-9))\n",
     "        return loss\n",
     "\n",
     "    def train(self, X, y):\n",
@@ -66,17 +163,25 @@
     "        self.bias = 0\n",
     "\n",
     "        for epoch in tqdm(range(self.epochs), desc=\"Training Model\"):\n",
+    "            # Compute predictions\n",
     "            linear_pred = np.dot(X, self.weights) + self.bias\n",
     "            y_pred = self.sigmoid(linear_pred)\n",
     "\n",
+    "            # Compute gradients\n",
     "            dw = np.dot(X.T, (y_pred - y)) / n_samples\n",
     "            db = np.sum(y_pred - y) / n_samples\n",
     "\n",
+    "            # Update weights and bias\n",
     "            self.weights -= self.learning_rate * dw\n",
     "            self.bias -= self.learning_rate * db\n",
     "\n",
+    "            # Compute loss\n",
     "            loss = self.compute_loss(y, y_pred)\n",
     "            self.loss_history.append(loss)\n",
+    "\n",
+    "            # Print loss periodically\n",
+    "            if epoch % 100 == 0:\n",
+    "                print(f\"Epoch {epoch}, Loss: {loss:.4f}\")\n",
     "\n",
     "    def predict_proba(self, X):\n",
     "        linear_pred = np.dot(X, self.weights) + self.bias\n",
@@ -86,125 +191,30 @@
     "        probabilities = self.predict_proba(X)\n",
     "        return [1 if p > 0.5 else 0 for p in probabilities]\n",
     "\n",
-    "    def save_model(self, X_columns, accuracy):\n",
+    "    def save_model(self, feature_columns, accuracy):\n",
+    "        \"\"\"Save the model with epoch, loss, and accuracy details.\"\"\"\n",
     "        timestamp = datetime.now().strftime(\"%Y-%m-%d-%H-%M\")\n",
-    "        final_loss = self.loss_history[-1]\n",
-    "        filename = f\"manual_logreg_epoch{self.epochs}_acc{accuracy:.2f}_loss{final_loss:.2f}_{timestamp}.joblib\"\n",
-    "        model_path = os.path.join(model_save_dir, filename)\n",
-    "        dump({\"weights\": self.weights, \"bias\": self.bias, \"columns\": X_columns}, model_path)\n",
-    "        print(f\"Model saved to {model_path}\")\n",
-    "        return model_path\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "cc113c9c-5ca3-4fc4-b8d4-c9176e692d59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DraftAssistant:\n",
-    "    def __init__(self, zip_path, heroes_json_path, games_to_process=None):\n",
-    "        self.zip_path = zip_path\n",
-    "        self.heroes_json_path = heroes_json_path\n",
-    "        self.games_to_process = games_to_process\n",
-    "        self.hero_mapping = None\n",
-    "        self.X_columns = None\n",
-    "        self.model = None\n",
-    "        self.data = None\n",
+    "        filename = f\"manual_logreg_acc{accuracy:.2f}_epochs{self.epochs}_{timestamp}.joblib\"\n",
+    "        model_data = {\n",
+    "            \"weights\": self.weights,\n",
+    "            \"bias\": self.bias,\n",
+    "            \"columns\": feature_columns,\n",
+    "            \"loss_history\": self.loss_history\n",
+    "        }\n",
+    "        joblib.dump(model_data, filename)\n",
+    "        print(f\"Model saved as: {filename}\")\n",
+    "        return filename\n",
     "\n",
-    "    def load_hero_names(self):\n",
-    "        with open(self.heroes_json_path, \"r\") as f:\n",
-    "            heroes = json.load(f)\n",
-    "        self.hero_mapping = {hero[\"id\"]: hero[\"api_name\"] for hero in heroes}\n",
-    "        print(f\"Loaded {len(self.hero_mapping)} heroes.\")\n",
-    "\n",
-    "    def load_games(self):\n",
-    "        X, y = [], []\n",
-    "        with zipfile.ZipFile(self.zip_path, \"r\") as zip_file:\n",
-    "            json_files = [name for name in zip_file.namelist() if name.endswith(\".json\")]\n",
-    "            if self.games_to_process:\n",
-    "                json_files = json_files[:self.games_to_process]\n",
-    "\n",
-    "            for file_name in tqdm(json_files, desc=\"Loading Games\"):\n",
-    "                try:\n",
-    "                    with zip_file.open(file_name, \"r\") as f:\n",
-    "                        game_data = json.load(f)\n",
-    "                        if \"result\" not in game_data or \"players\" not in game_data[\"result\"]:\n",
-    "                            logging.warning(f\"Missing 'players' in {file_name}\")\n",
-    "                            continue\n",
-    "\n",
-    "                        radiant_heroes = []\n",
-    "                        dire_heroes = []\n",
-    "\n",
-    "                        for player in game_data[\"result\"][\"players\"]:\n",
-    "                            if player[\"player_slot\"] < 128:\n",
-    "                                radiant_heroes.append(player[\"hero_id\"])\n",
-    "                            else:\n",
-    "                                dire_heroes.append(player[\"hero_id\"])\n",
-    "\n",
-    "                        match_features = {f\"hero_{hero_id}\": 1 for hero_id in radiant_heroes}\n",
-    "                        match_features.update({f\"hero_{hero_id}\": -1 for hero_id in dire_heroes})\n",
-    "                        X.append(match_features)\n",
-    "                        y.append(1 if game_data[\"result\"][\"radiant_win\"] else 0)\n",
-    "\n",
-    "                except (KeyError, json.JSONDecodeError, TypeError) as e:\n",
-    "                    logging.warning(f\"Error processing {file_name}: {e}\")\n",
-    "                    continue\n",
-    "        self.data = (X, y)\n",
-    "        print(f\"Loaded {len(y)} games.\")\n",
-    "\n",
-    "    def preprocess_data(self):\n",
-    "        X_raw, y = self.data\n",
-    "        df = pd.DataFrame(X_raw).fillna(0)\n",
-    "        self.X_columns = df.columns\n",
-    "        return df.values, np.array(y)\n",
-    "\n",
-    "    def train_model(self, X, y, learning_rate=0.05, epochs=500):\n",
-    "        print(\"Training model...\")\n",
-    "        self.model = ManualLogisticRegression(learning_rate=learning_rate, epochs=epochs)\n",
-    "        self.model.train(X, y)\n",
-    "        y_pred = self.model.predict(X)\n",
-    "        accuracy = np.mean(y == y_pred)\n",
-    "        print(f\"Training Accuracy: {accuracy:.2f}\")\n",
-    "        return accuracy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2f08536d-fc11-495a-8c82-89491de9e8e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 122 heroes.\n"
-     ]
-    }
-   ],
-   "source": [
-    "assistant = DraftAssistant(zip_path, heroes_json_path, games_to_process)\n",
-    "assistant.load_hero_names()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "596a4bf9-3b32-4cba-aae8-7e255c8e0eaa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading Games:  16%|█████████▊                                                  | 382778/2338043 [01:28<07:18, 4461.96it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "assistant.load_games()"
+    "    @staticmethod\n",
+    "    def load_model(filename):\n",
+    "        \"\"\"Load a saved model.\"\"\"\n",
+    "        model_data = joblib.load(filename)\n",
+    "        model = ManualLogisticRegression()\n",
+    "        model.weights = model_data[\"weights\"]\n",
+    "        model.bias = model_data[\"bias\"]\n",
+    "        model.loss_history = model_data[\"loss_history\"]\n",
+    "        print(f\"Model loaded from: {filename}\")\n",
+    "        return model, model_data[\"columns\"]\n"
    ]
   },
   {
@@ -214,19 +224,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = assistant.preprocess_data()\n",
-    "print(f\"Processed data shape: {X.shape}, Target size: {len(y)}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c833f84a-d586-4648-81e3-1fe97e67e132",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accuracy = assistant.train_model(X, y, learning_rate=0.05, epochs=500)\n",
-    "assistant.model.save_model(assistant.X_columns, accuracy)\n"
+    "def recommend_next_hero_with_roles(model, radiant_heroes, dire_heroes, feature_columns, hero_mapping, chosen_heroes=set()):\n",
+    "    roles = {\"Hard Carry\": [], \"Core\": [], \"Support\": []}\n",
+    "    hero_probabilities = []\n",
+    "\n",
+    "    # Predict win probabilities for all available heroes\n",
+    "    available_heroes = set(hero_mapping.keys()) - set(radiant_heroes) - set(dire_heroes) - chosen_heroes\n",
+    "    for hero_id in available_heroes:\n",
+    "        test_radiant = radiant_heroes + [hero_id]\n",
+    "        win_prob = predict_win_probability(model, test_radiant, dire_heroes, feature_columns)\n",
+    "        hero_probabilities.append((hero_id, win_prob))\n",
+    "\n",
+    "    # Sort heroes by win probability\n",
+    "    hero_probabilities = sorted(hero_probabilities, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    # Assign heroes to roles\n",
+    "    for hero_id, win_prob in hero_probabilities:\n",
+    "        if \"carry\" in hero_mapping[hero_id].lower():\n",
+    "            roles[\"Hard Carry\"].append((hero_id, win_prob))\n",
+    "        elif \"support\" in hero_mapping[hero_id].lower():\n",
+    "            roles[\"Support\"].append((hero_id, win_prob))\n",
+    "        else:\n",
+    "            roles[\"Core\"].append((hero_id, win_prob))\n",
+    "\n",
+    "    # Return best hero per role\n",
+    "    best_heroes = {}\n",
+    "    for role, heroes in roles.items():\n",
+    "        if heroes:\n",
+    "            best_heroes[role] = heroes[0]\n",
+    "            chosen_heroes.add(heroes[0][0])  # Add to chosen heroes\n",
+    "\n",
+    "    return best_heroes\n"
    ]
   },
   {
@@ -236,17 +264,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_win_probability(model, radiant_heroes, dire_heroes, feature_columns):\n",
-    "    draft = {f\"hero_{hero_id}\": 1 for hero_id in radiant_heroes}\n",
-    "    draft.update({f\"hero_{hero_id}\": -1 for hero_id in dire_heroes})\n",
-    "    draft_df = pd.DataFrame([draft]).reindex(columns=feature_columns, fill_value=0)\n",
-    "    return model.predict_proba(draft_df.values)[0]\n",
+    "# Train the model\n",
+    "model = ManualLogisticRegression(learning_rate=0.01, epochs=500)\n",
+    "model.train(X, y)\n",
     "\n",
-    "# Example draft\n",
-    "radiant_heroes = [7, 9, 44]\n",
-    "dire_heroes = [8, 4, 129]\n",
-    "win_prob = predict_win_probability(assistant.model, radiant_heroes, dire_heroes, assistant.X_columns)\n",
-    "print(f\"Win Probability for Radiant: {win_prob:.2f}\")\n"
+    "# Calculate training accuracy\n",
+    "y_pred = model.predict(X)\n",
+    "accuracy = np.mean(y == y_pred)\n",
+    "print(f\"Training Accuracy: {accuracy:.2%}\")\n",
+    "\n",
+    "# Save the model\n",
+    "model_filename = model.save_model(df_X.columns, accuracy)\n"
    ]
   },
   {
@@ -256,26 +284,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend_next_hero(model, radiant_heroes, dire_heroes, feature_columns, hero_mapping):\n",
-    "    max_prob = 0\n",
-    "    best_hero = None\n",
+    "# Load the model\n",
+    "loaded_model, feature_columns = ManualLogisticRegression.load_model(model_filename)\n",
     "\n",
-    "    # Check all available heroes\n",
-    "    available_heroes = set(hero_mapping.keys()) - set(radiant_heroes) - set(dire_heroes)\n",
-    "    for hero_id in available_heroes:\n",
-    "        test_radiant = radiant_heroes + [hero_id]\n",
-    "        win_prob = predict_win_probability(model, test_radiant, dire_heroes, feature_columns)\n",
-    "        if win_prob > max_prob:\n",
-    "            max_prob = win_prob\n",
-    "            best_hero = hero_id\n",
+    "# Predict win probability for a new draft\n",
+    "radiant_heroes = [7, 9, 44]\n",
+    "dire_heroes = [8, 4, 129]\n",
     "\n",
-    "    return best_hero, max_prob\n",
+    "def predict_win_probability(model, radiant_heroes, dire_heroes, feature_columns):\n",
+    "    draft = {f\"hero_{hero_id}\": 1 for hero_id in radiant_heroes}\n",
+    "    draft.update({f\"hero_{hero_id}\": -1 for hero_id in dire_heroes})\n",
+    "    draft_df = pd.DataFrame([draft]).reindex(columns=feature_columns, fill_value=0)\n",
+    "    return model.predict_proba(draft_df.values)[0]\n",
     "\n",
-    "# Example usage\n",
-    "best_hero, updated_win_prob = recommend_next_hero(\n",
-    "    assistant.model, radiant_heroes, dire_heroes, assistant.X_columns, assistant.hero_mapping\n",
-    ")\n",
-    "print(f\"Recommended Hero: {assistant.hero_mapping[best_hero]} (Updated Win Probability: {updated_win_prob:.2f})\")\n"
+    "win_prob = predict_win_probability(loaded_model, radiant_heroes, dire_heroes, feature_columns)\n",
+    "print(f\"Win Probability for Radiant: {win_prob:.2%}\")\n"
    ]
   }
  ],
